🔧 Simplify button layout to 3 essential controls - Consolidate all buttons into single controls section - Keep only Pause, Reset, and Settings (⚙) buttons - Remove bottom navigation bar and extra buttons - Clean up JavaScript and CSS for removed elements - Streamline user interface for maximum minimalism

--- a/index.html
+++ b/index.html
@@ -36,23 +36,8 @@
                 <button class="control-btn" id="resetBtn">
                     <span class="btn-text">Reset</span>
                 </button>
-            </div>
-
-            <div class="bottom-controls">
-                <button class="icon-btn" id="menuBtn">
-                    <span class="icon">☰</span>
-                </button>
-                <button class="icon-btn primary" id="playBtn">
-                    <span class="icon">▶</span>
-                </button>
-                <button class="icon-btn" id="statsBtn">
-                    <span class="icon">📊</span>
-                </button>
-                <button class="icon-btn" id="settingsBtn">
-                    <span class="icon">⚙</span>
-                </button>
-                <button class="icon-btn" id="profileBtn">
-                    <span class="icon">👤</span>
+                <button class="control-btn" id="settingsBtn">
+                    <span class="btn-text">⚙</span>
                 </button>
             </div>
         </main>
