🎯 Simplify to 2-button layout with icons - Replace text buttons with circular icon buttons - Start: ▶ triangle icon when stopped - Pause: ⏸ pause icon when running - Move Reset functionality into Settings modal - Remove phone-like container outline - Position buttons equidistant from timer like title - Update responsive design for new layout

--- a/index.html
+++ b/index.html
@@ -31,13 +31,10 @@
 
             <div class="controls">
                 <button class="control-btn" id="playPauseBtn">
-                    <span class="btn-text">Pause</span>
-                </button>
-                <button class="control-btn" id="resetBtn">
-                    <span class="btn-text">Reset</span>
+                    <span class="btn-icon">▶</span>
                 </button>
                 <button class="control-btn" id="settingsBtn">
-                    <span class="btn-text">⚙</span>
+                    <span class="btn-icon">⚙</span>
                 </button>
             </div>
         </main>
@@ -77,6 +74,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
+                    <button class="control-btn secondary" id="resetBtn">Reset Timer</button>
                     <button class="control-btn primary" id="saveSettings">Save Settings</button>
                 </div>
             </div>
